# rfsoc-streamer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
include/: RfsocBuilder.h  RfsocPacket.h  RfsocSample.h  RfsocTransmitter.h
python/ccatrfsoc/: SessionManager.py  __init__.py
python/ccatrfsoc/CCATFileWriter/: _CCATFileWriter.py  __init__.py
scripts/: .gitignore  Makefile  stream.py  stream_config.yaml  stream_min_example.cxx
src/: Makefile  RfsocBuilder.cpp  RfsocBuilder.cxx  RfsocTransmitter.cpp  RfsocTransmitter.cxx  python.cpp
test/: .gitignore  Makefile  cppexample.cxx  stream.py  stream_config.yaml  stream_min_example.cxx
